<resources>
    <string name="app_name">Книга покупок</string>
    <string name="ad_Id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_Id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="purchase_cat1">Покупки</string>
    <string name="purchase_cat2">Аккаунт</string>
    <string name="purchase_foods">Продукты питания</string>
    <string name="purchase_drugs">Лекарства</string>
    <string name="price_desc">Цена:</string>
    <string name="publish">Сохранить</string>
    <string name="description_hint">Введите описание</string>
    <string name="description">Описание</string>
    <string name="price_hint">Укажите цену</string>
    <string name="price">Цена</string>
    <string name="title_hint">Введите наименование</string>
    <string name="title">Наименование</string>
    <string name="select_category">Выберите категорию</string>
    <string name="category">Категория</string>

    <string name="delete_item">Удаление элемента</string>
    <string name="delete_item_message">Удалить выбранный элемент?</string>
    <string name="confirm_dialog">Ввод</string>
    <string name="cancel_dialog">Отмена</string>
    <string name="yes_dialog">Да</string>
    <string name="no_dialog">Нет</string>
    <string name="quantity">Количество</string>
    <string name="quantity_hint">Укажите количество</string>
    <string name="summa">Сумма</string>
    <string name="summa_hint">Укажите сумму</string>
    <string name="no_selected_item">Не выбрана позиция!</string>
    <string name="search_hint">Найти...</string>
    <string name="product">Товар</string>
    <string name="select_product">Выберите товар</string>
    <string name="import_fns">ФНС</string>

    <string name="sun">Вс</string>
    <string name="mon">Пн</string>
    <string name="tue">Вт</string>
    <string name="wed">Ср</string>
    <string name="thu">Чт</string>
    <string name="fri">Пт</string>
    <string name="sat">Сб</string>
    <string name="ent_date">Дата</string>
    <string name="ent_time">Время</string>
    <string name="caption_filter_summa">На сумму</string>
    <string name="seller">Продавец</string>
    <string name="select_seller">Выберите продавца</string>
    <string name="caption_filter_count">Покупок</string>
    <string name="ProgressJsonLoading">Загрузка чеков...</string>
    <string name="import_checks">Загрузить чеки?</string>
    <string name="confirm_load_check">Загрузка</string>
    <string name="bottom_menu_new">New</string>
    <string name="bottom_menu_delete">Delete</string>
    <string name="bottom_menu_update">Update</string>
    <string name="bottom_menu_edit">Edit</string>
    <string name="bottom_menu_parent">Родитель</string>
    <string name="bottom_menu_expand_more">Развернуть</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="base_list">Справочники</string>
    <string name="baselist_product">Товары</string>
    <string name="baselist_seller">Продавцы</string>
    <string name="demo_base">Загрузить демо данные</string>
    <string name="demo_is_loaded">Данные загружены</string>
    <string name="demo_load_data">Данные загружаются</string>
    <string name="demo_fail">Ошибка получения данных</string>
    <string name="delete_items_message">Удалить отмеченные записи?</string>
    <string name="download_demo">Загрузить базу?</string>

    <string name="clear">CLEAR</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="multiply">*</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="seven">7</string>
    <string name="subtract">-</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="divide">/</string>
    <string name="four">4</string>
</resources>