<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/white">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/nextButton"
            android:layout_toLeftOf="@+id/nextButton"
            android:layout_toEndOf="@+id/prevButton"
            android:layout_toRightOf="@+id/prevButton"
            android:gravity="center"
            android:text="Month name"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/prevButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_arrow_left_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_arrow_right_24" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_layout_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@color/daycaptionColor"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:weightSum="7">

        <TextView
            android:id="@+id/text_view_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mon" />

        <TextView
            android:id="@+id/text_view_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tue" />

        <TextView
            android:id="@+id/text_view_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wed" />

        <TextView
            android:id="@+id/text_view_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thu" />

        <TextView
            android:id="@+id/text_view_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fri" />

        <TextView
            android:id="@+id/text_view_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat" />

        <TextView
            android:id="@+id/text_view_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sun" />

    </LinearLayout>

    <GridView
        android:id="@+id/calendarGridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginBottom="20dp"
        android:layout_weight="200"
        android:horizontalSpacing="0dp"
        android:numColumns="7"
        android:paddingLeft="0dp"
        android:paddingTop="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"></GridView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/negativeButton"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="60dp"
            android:layout_weight="1"
            android:background="@drawable/calendar_background"
            android:text="@string/cancel_dialog" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/positiveButton"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|end"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:background="@drawable/calendar_background"
            android:text="@string/confirm_dialog" />

    </LinearLayout>

</LinearLayout>
